Add git alias `root`

--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,7 @@
 [core]
   excludesfile = /Users/davurclementsen/.gitignore_global
 [alias]
+  root = rev-parse --show-toplevel
   unstage = reset HEAD --
   graph = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset)\t%C(bold green)%d%C(reset) %C(white)%s%C(reset) - %C(bold white)%an%C(reset) %C(bold yellow)(%ar)%C(reset)' --all
   hist = log --pretty=format:\"%C(bold blue)%h%C(reset) %C(bold yellow)%ad%C(reset) | %s%C(bold green)%d%C(reset) %C(bold white)[%an]%C(reset)\" --graph --date=short
